E2: scalar-stream row explosion lowers to SQL; shapeRow explosion deleted
A concatenate-rooted to-many scalar funcCol in project now explodes rows
IN SQL (Fold.lateralElem: two-layer LEFT LATERAL — correlated list expr
as an inner local column, UNNEST over that column). Detection is
concatenate-rooted (Fold.isManyScalarCol), not typed-multiplicity alone:
association to-many navigations already explode through the join
machinery. One many-column per project (engine wall).

Executor.shapeRow's host-side explosion (audit A13) was probe-proven
dead (zero firings on the full referee) and is DELETED — a many-valued
cell reaching a scalar TDS slot is now a loud wall; arrayAsList gone.
JavaEvalLedgerTest pins the Executor row at 0.

Carrier purity: pre-dialect SqlFn.UNNEST sites consolidated 13 -> 12
through Fold.unnestColumn/lateralElem (collection-mapper and
instance-literal explosions ride the same helpers); UNNEST pin
tightened to 12, LIST-reducer pin to 0.

Corpus 2337 -> 2339: testConcatenateWithFilter (the F4.3 named residue,
CSV_DIFFERENTIAL mechanism 3) and testConcatenateFlatWithOtherProperty
both pass. 'sql-text side' H2 declines 56 -> 57 (LEFT-LATERAL not
raw-H2-replayable; row tied to the gained test). Full chain GREEN
(gates 1,2,4,5,6,7,8).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01J3JZNmVWbMccsiz7wgbXCD